2004-11-29  Bastien Nocera  <hadess@hadess.net>

	* data/totem.keys: added audio/mpegurl as a supported mime-type
	for the benefit of the Zina PHP engine

2004-11-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in: if xine-lib isn't available, automatically check
	for the GStreamer libraries instead of having to enable it
	(Closes: #159081)

2004-11-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/.cvsignore:
	* data/Makefile.am:
	* data/totem.desktop.in.in:
	* data/totem.desktop.in.in.in:
	* data/vanity.desktop.in:
	* data/vanity.desktop.in.in: add X-GNOME-Bugzilla-Version=@VERSION@
	to the desktop files (Closes: #159395)

2004-11-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* README:
	  Update TODO list somewhat.
	* src/bacon-video-widget-gst.c: (bacon_video_widget_dvd_event),
	(bacon_video_widget_can_play):
	  Add DVD. Add DVD events (even though they don't work yet, but
	  that's a GStreamer internal issue).

2004-11-26  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_set_audio_out_type):
	* src/bacon-video-widget.h: Add 4.1-channel support

2004-11-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_signal_idler),
	(got_buffering), (bacon_video_widget_new):
	* src/totem-statusbar.c: (totem_statusbar_init),
	(totem_statusbar_update_time), (totem_statusbar_timeout_pop),
	(totem_statusbar_push):
	* src/totem-statusbar.h:
	* src/totem.c: (label_create), (main):
	  Implement buffering for GStreamer backend as well. Show buffering
	  in a progress bar rather than a label. Keep updated even when
	  playing. Disappears automatically if not updated. Progressbar needs
	  to be made smaller but I don't know how.

2004-11-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (get_media_size),
	(bacon_video_widget_expose_event),
	(bacon_video_widget_size_allocate), (state_change),