@@ -1,5 +1,5 @@
 /* bacon-resize.c
- * Copyright (C) 2003, Bastien Nocera <hadess@hadess.net>
+ * Copyright (C) 2003-2004, Bastien Nocera <hadess@hadess.net>
  * All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
@@ -20,142 +20,117 @@
 #include "config.h"
 #include "bacon-resize.h"
 
+#ifdef HAVE_XVIDMODE
 #include <glib.h>
 #include <gdk/gdkx.h>
+#include <gdk/gdk.h>
+#include <X11/X.h>
+#include <X11/Xlib.h>
 #include <X11/Xproto.h>
 #include <X11/Xlib.h>
 
-#ifdef HAVE_RANDR
+#include <X11/extensions/xf86vmode.h>
 #include <X11/extensions/Xrandr.h>
 #include <X11/extensions/Xrender.h>
+
+/* XVidMode */
+XF86VidModeModeInfo **modelines;
+int nr_modeline;
+
+/* XRandR */
+XRRScreenConfiguration *xr_screen_conf;
+XRRScreenSize *xr_sizes;
+Rotation xr_current_rotation;
+SizeID xr_original_size;
 #endif
 
 gboolean
 bacon_resize_init (void)
 {
-#ifdef HAVE_RANDR
+#ifdef HAVE_XVIDMODE
 	int event_basep, error_basep, res;
 
+	//FIXME https://bugs.freedesktop.org/show_bug.cgi?id=1976
+	return FALSE;
+
 	XLockDisplay (GDK_DISPLAY());
-	res = XRRQueryExtension (GDK_DISPLAY(), &event_basep, &error_basep);
+
+	res = XF86VidModeQueryExtension (GDK_DISPLAY(), &event_basep, &error_basep) || !XRRQueryExtension (GDK_DISPLAY(), &event_basep, &error_basep);
+
+	if (!res) {
+		XUnlockDisplay (GDK_DISPLAY());
+		return FALSE;
+	}
+
+	res = XF86VidModeGetAllModeLines (GDK_DISPLAY(), XDefaultScreen (GDK_DISPLAY()), &nr_modeline, &modelines);
+
+	xr_screen_conf = XRRGetScreenInfo (GDK_DISPLAY(), GDK_ROOT_WINDOW());
+
 	XUnlockDisplay (GDK_DISPLAY());
 
-	//FIXME http://bugzilla.gnome.org/show_bug.cgi?id=118203
-#if 0
-	if (res)
-		return TRUE;
-#endif
-#endif /* HAVE_RANDR */
+	return TRUE;
+
+#endif /* HAVE_XVIDMODE */
 	return FALSE;
 }
 
 void
-bacon_resize (int height, int width)
+bacon_resize (void)
 {
-#ifdef HAVE_RANDR
-	XRRScreenConfiguration *xr_screen_conf;
+#ifdef HAVE_XVIDMODE
+	int width, height, i, xr_nsize;
 	XRRScreenSize *xr_sizes;
-	SizeID xr_current_size;
-	int xr_nsize, i;
-	Rotation xr_rotations;
-	Rotation xr_current_rotation;
-	int target = -1;
-	Status status;
+	gboolean found = FALSE;
 
-	if (height == 0 || width == 0)
-		return;
-
-	/* Getting the current info */
 	XLockDisplay (GDK_DISPLAY());
-	xr_screen_conf = XRRGetScreenInfo
-		(GDK_DISPLAY(), GDK_ROOT_WINDOW());
-	xr_current_size = XRRConfigCurrentConfiguration
-		(xr_screen_conf, &xr_current_rotation);
-	xr_sizes = XRRConfigSizes (xr_screen_conf, &xr_nsize);
-	xr_rotations = XRRConfigRotations (xr_screen_conf,
-			&xr_current_rotation);
-	XUnlockDisplay (GDK_DISPLAY());
 
-	for (i = 0; i < xr_nsize; i++)
-	{
-		/* Avoid non-multiples of 16 for the resolutions as it
-		 * would break ffmpeg's direct rendering and probably
-		 * make everything slower */
-		if (xr_sizes[i].height % 16 != 0 || xr_sizes[i].width % 16 != 0)
-			continue;
-		if (height > xr_sizes[i].height && width > xr_sizes[i].width)
+	/* Check if there's a viewport */
+	width = gdk_screen_width ();
+	height = gdk_screen_height ();
+	if (width == modelines[0]->hdisplay
+			&& height == modelines[0]->vdisplay) {
+		XUnlockDisplay (GDK_DISPLAY());
+		return;
+	}
+
+	/* Find the xrandr mode that corresponds to the real size */
+	xr_sizes = XRRConfigSizes (xr_screen_conf, &xr_nsize);
+	xr_original_size = XRRConfigCurrentConfiguration
+		(xr_screen_conf, &xr_current_rotation);
+
+	for (i = 0; i < xr_nsize; i++) {
+		if (modelines[0]->hdisplay == xr_sizes[i].width
+		&& modelines[0]->vdisplay == xr_sizes[i].height) {
+			found = TRUE;
 			break;
-		if (height < xr_sizes[i].height && width < xr_sizes[i].width)
-		{
-			if (target == -1)
-			{
-				target = i;
-				continue;
-			}
-			if (xr_sizes[i].height < xr_sizes[target].height
-					 && xr_sizes[i].width < xr_sizes[target].width)
-			{
-				target = i;
-			}
 		}
 	}
 
-	if (target == -1)
+	if (!found) {
+		XUnlockDisplay (GDK_DISPLAY());
 		return;
-
-	XLockDisplay (GDK_DISPLAY());
-	status = XRRSetScreenConfig (GDK_DISPLAY(),
-			xr_screen_conf,
-			GDK_ROOT_WINDOW(),
-			(SizeID)target,
-			xr_current_rotation,
-			CurrentTime);
-	XUnlockDisplay (GDK_DISPLAY());
-#endif /* HAVE_RANDR */
-}
-
-int
-bacon_resize_get_current (void)
-{
-#ifdef HAVE_RANDR
-	XRRScreenConfiguration *xr_screen_conf;
-	SizeID xr_current_size;
-	Rotation xr_current_rotation;
-
-	XLockDisplay (GDK_DISPLAY());
-	xr_screen_conf = XRRGetScreenInfo
-		(GDK_DISPLAY(), GDK_ROOT_WINDOW());
-	xr_current_size = XRRConfigCurrentConfiguration
-		(xr_screen_conf, &xr_current_rotation);
-	XUnlockDisplay (GDK_DISPLAY());
-
-	return (int) xr_current_size;
-#else
-	return -1;
-#endif /* HAVE_RANDR */
-}
-
-void
-bacon_restore (int id)
-{
-#ifdef HAVE_RANDR
-	XRRScreenConfiguration *xr_screen_conf;
-	Rotation xr_current_rotation;
-	SizeID xr_current_size;
-
-	if (id == -1)
-		return;
-
-	XLockDisplay (GDK_DISPLAY());
-	xr_screen_conf = XRRGetScreenInfo
-		(GDK_DISPLAY(), GDK_ROOT_WINDOW());
-	xr_current_size = XRRConfigCurrentConfiguration
-		(xr_screen_conf, &xr_current_rotation);
+	}
 
 	XRRSetScreenConfig (GDK_DISPLAY(),
 			xr_screen_conf,
 			GDK_ROOT_WINDOW(),
-			id,
+			(SizeID) i,
+			xr_current_rotation,
+			CurrentTime);
+
+	XUnlockDisplay (GDK_DISPLAY());
+#endif /* HAVE_XVIDMODE */
+}
+
+void
+bacon_restore (void)
+{
+#ifdef HAVE_XVIDMODE
+	XLockDisplay (GDK_DISPLAY());
+	XRRSetScreenConfig (GDK_DISPLAY(),
+			xr_screen_conf,
+			GDK_ROOT_WINDOW(),
+			xr_original_size,
 			xr_current_rotation,
 			CurrentTime);
 	XUnlockDisplay (GDK_DISPLAY());
